src/objects/CourseDependency__c.object
<CustomObject>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Predecessor Courses</relationshipLabel>
        <relationshipName>PredecessorCourses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalKey__c</fullName>
        <externalId>true</externalId>
        <label>External Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Predecessor</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Dependent Courses</relationshipLabel>
        <relationshipName>DependentCourses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Course Dependency</label>
    <nameField>
        <displayFormat>CD-{00000000}</displayFormat>
        <label>Course Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CoursePredecessorMustBeDifferent</fullName>
        <active>true</active>
        <description>When a Course dependency is created/updated, Course and Predecessor must be different.</description>
        <errorConditionFormula>Course__c = Predecessor__c</errorConditionFormula>
        <errorMessage>Course and Predecessor must be different.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CoursePredecessorSameProgram</fullName>
        <active>true</active>
        <errorConditionFormula>Course__r.Program__c != Predecessor__r.Program__c</errorConditionFormula>
        <errorMessage>Course and Predecessor must belong to the same Program</errorMessage>
    </validationRules>
</CustomObject>